force-app/main/default/objects/Widget__c/fields/Batch_Updated__c.field-meta.xml
<CustomField>
    <fullName>Batch_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Batch Updated</label>
    <type>Checkbox</type>
</CustomField>