force-app/main/default/objects/Widget__c/fields/Is_Properly_Nested__c.field-meta.xml
<CustomField>
    <fullName>Is_Properly_Nested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Properly Nested</label>
    <type>Checkbox</type>
</CustomField>