force-app/main/default/objects/Widget__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Value__c</columns>
    <columns>Is_Properly_Nested__c</columns>
    <columns>Batch_Updated__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>